# fracture_reduction_planning

./: .gitignore.txt  CMakeLists.txt  README.md  bone_descriptor.cpp  bone_descriptor.h  data_processing.h  edge_descriptor.cpp  edge_descriptor.h  file_fillter.h  global_setting.h  project_main.cpp  single_point_descriptor.cpp  single_point_descriptor.h  surface_descriptor.cpp  surface_descriptor.h  volume_descriptor.cpp  volume_descriptor.h
project-bin/: cutter_descriptor.cpp  cutter_descriptor.h
project-bin/ITKFactoryRegistration/: itkImageIOFactoryRegisterManager.h
python_version/reduction_program/: data_input.py  data_preprocess.py  feature_extract.py  fit_plane.py  main.py  pcd_transform.py  reduction_setting.py  regis.py  register.py  source.npy  target.npy  visualization.py
python_version/screw_program/: core.py  core_software.py  data_input.py  data_prepprocess.py  data_preprocess.py  fig.py  geometry.py  homework_fig.py  main.py  path_program.py  screw_program.py  screw_setting.py  visualization.py
python_version/screw_program/cases/data0003/face_pointcloud/: face0.pcd  face1.pcd  face2.pcd
python_version/screw_program/data/original STL/: Untitled00006.stl
python_version/screw_program/export_screw_stl/data0002/: screw_0.stl
python_version/screw_program/export_screw_stl/data0003/: screw_0.stl  screw_1.stl  screw_2.stl
python_version/screw_program/export_screw_stl/data0006/: screw_0.stl  screw_1.stl  screw_2.stl
python_version/screw_program/export_screw_stl/data0013/: screw_0.stl  screw_1.stl
python_version/screw_program/export_screw_stl/data0014/: screw_0.stl  screw_1.stl
python_version/screw_program/export_screw_stl/data0015/: screw_0.stl  screw_1.stl
python_version/screw_program/export_screw_stl/data0026/: screw_0.stl  screw_1.stl
python_version/screw_program/export_screw_stl/data0030/: screw_0.stl  screw_1.stl  screw_2.stl  screw_3.stl
python_version/screw_program/export_screw_stl/data0059/: screw_0.stl  screw_1.stl  screw_2.stl  screw_3.stl  screw_4.stl
python_version/screw_program/export_screw_stl/data0081/: screw_0.stl  screw_1.stl
python_version/screw_program/export_screw_stl/data0082/: screw_0.stl  screw_1.stl
python_version/screw_program/export_screw_stl/data0085/: screw_0.stl  screw_1.stl  screw_2.stl  screw_3.stl  screw_4.stl
python_version/screw_program/export_screw_stl/data0087/: screw_0.stl  screw_1.stl  screw_2.stl
python_version/screw_program/export_screw_stl/data0090/: screw_0.stl  screw_1.stl  screw_2.stl  screw_3.stl  screw_4.stl
python_version/screw_program/export_screw_stl/data0092/: screw_0.stl  screw_1.stl  screw_2.stl
python_version/screw_program/export_screw_stl/data0105/: screw_0.stl  screw_1.stl  screw_2.stl
python_version/screw_program/software0105/: core_software.py  data_input_software.py  data_preprocess_software.py  geometry_software.py  screw_program.py  screw_setting.py  visualization_software.py
python_version/screw_program/src/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Mainwindow.cpp  Segmentation_DP.sln  Segmentation_DP.vcxproj  Segmentation_DP.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
python_version/screw_program/src/Debug/: Segmentation_DP.ilk
python_version/screw_program/src/Segmentation_DP.dir/Debug/: Segmentation_DP.exe.recipe
python_version/screw_program/src/Segmentation_DP.dir/Debug/Segmentation_DP.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Segmentation_DP.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
python_version/screw_program/src/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
python_version/screw_program/src/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
(+62 files in other folders)
